fix text-align ib avatar-card for safari

--- a/app/css/pages/profile/avatar-card.scss
+++ b/app/css/pages/profile/avatar-card.scss
@@ -32,7 +32,8 @@
 
   &__change {
     position: relative;
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
 
     &-input {
       opacity: 0;
